[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/boss/body.png" type="Texture" id=1]
[ext_resource path="res://assets/boss/arm.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Boss/Boss.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Boss/bob.gd" type="Script" id=4]

[node name="boss" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 3 )

[node name="body" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="body"]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="body"]
polygon = PoolVector2Array( -452.112, 144.319, -291.931, -10.5226, -290.596, -152.016, -210.506, -117.31, -126.411, 0.156128, -56.9992, -1.17871, -27.6328, -35.8846, 1.73376, -41.2239, 29.7654, -35.8846, 52.4576, -3.84839, 131.213, -3.84839, 208.634, -117.31, 288.724, -164.029, 295.399, -5.18323, 448.905, 146.989 )

[node name="spawn_position" type="Node2D" parent="body"]
position = Vector2( 1, -67 )

[node name="left_arm" type="Area2D" parent="."]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="left_arm"]
position = Vector2( -548.619, 18.6878 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="left_arm"]
polygon = PoolVector2Array( -609.623, 165.676, -648.333, 9.49994, -651.003, -142.672, -625.641, -232.106, -672.36, -289.504, -634.985, -324.21, -600.279, -300.183, -580.256, -350.907, -525.528, -328.215, -534.872, -297.513, -509.51, -310.862, -469.465, -266.812, -530.867, -213.418, -550.89, -221.427, -577.587, -127.989, -580.256, 4.16058, -538.876, 145.654 )

[node name="spawn_position" type="Node2D" parent="left_arm"]
position = Vector2( -576.945, -263.779 )

[node name="right_arm" type="Area2D" parent="."]
scale = Vector2( -1, 1 )
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="right_arm"]
position = Vector2( -548.619, 18.6878 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="right_arm"]
polygon = PoolVector2Array( -609.623, 165.676, -648.333, 9.49994, -651.003, -142.672, -625.641, -232.106, -672.36, -289.504, -634.985, -324.21, -600.279, -300.183, -580.256, -350.907, -525.528, -328.215, -534.872, -297.513, -509.51, -310.862, -469.465, -266.812, -530.867, -213.418, -550.89, -221.427, -577.587, -127.989, -580.256, 4.16058, -538.876, 145.654 )

[node name="spawn_position" type="Node2D" parent="right_arm"]
position = Vector2( -569.088, -283.983 )

[connection signal="on_damage" from="body" to="." method="_on_body_on_damage"]
[connection signal="on_damage" from="left_arm" to="." method="_on_left_arm_on_damage"]
[connection signal="on_damage" from="right_arm" to="." method="_on_right_arm_on_damage"]
